<resources>
    <string name="app_name">TEDxCSU</string>

    <string name="title_section1">Profile</string>
    <string name="title_section2">Photo Gallery</string>
    <string name="title_section3">Event Details</string>
    <string name="title_section4">Notifications</string>
    <string name="title_section5">More Info</string>
    <string name="title_meet_speakers">Meet the Speakers</string>
    <string name="title_learn_event">Learn About the Event</string>
    <string name="title_launch_itinerary">Launch Party Itinerary</string>
    <string name="title_tedxcsu_itinerary">TEDxCSU Itinerary</string>

    <string name="hello_world">Hello world!</string>

    <string name="profile_hello">Hello,</string>
    <string name="profile_email">Email:</string>
    <string name="profile_phone">Phone:</string>
    <string name="profile_affiliation">Affiliation:</string>
    <string name="profile_photo">Photo:</string>
    <string name="profile_no_photo">No Photo</string>
    <string name="connection_error">Connection error.</string>
    <string name="none">None.</string>

    <string name="dialog_add_photo">Add Photo</string>
    <string name="dialog_email">New Email</string>
    <string name="dialog_phone">New Phone</string>
    <string name="dialog_affiliation">New Affiliation</string>
    <string name="dialog_old_password">Password (required)</string>
    <string name="dialog_new_password">New Password</string>
    <string name="dialog_new_password_conf">New Password Confirmation</string>

    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="descr_image">Image</string>
    <string name="name_image_grid">Photo Gallery</string>
    <string name="ac_name_image_pager">Image</string>
    <string name="countdown_label">Countdown:</string>
    <string name="grid_nothing_display">No connection.</string>
    <string name="countdown_completed">TEDxCSU is live!</string>

    <string name="more_info_1">More information is available at <a>tedxclevelandstateuniversity.com/</a></string>
    <string name="more_info_2">To contact us, please enter your message below:</string>
    <string name="email_button">Open Email App</string>
    <string name="email_subject">TedXCSU Inquiry</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="work_in_progress">Work in Progress</string>


</resources>
