<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout android:id="@+id/dialog_edit_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">

    <EditText android:id="@+id/dialog_email" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp"
        android:inputType="textEmailAddress" android:layout_height="match_parent"
        android:hint="@string/dialog_email" />

    <EditText android:id="@+id/dialog_phone" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp" android:inputType="phone"
        android:layout_height="match_parent" android:hint="@string/dialog_phone" />

    <EditText android:id="@+id/dialog_affiliation" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp"
        android:layout_height="match_parent" android:hint="@string/dialog_affiliation" />

    <EditText android:id="@+id/dialog_old_password" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp" android:inputType="textPassword"
        android:layout_height="match_parent" android:hint="@string/dialog_old_password" />

    <EditText android:id="@+id/dialog_new_password" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp" android:inputType="textPassword"
        android:layout_height="match_parent" android:hint="@string/dialog_new_password" />

    <EditText android:id="@+id/dialog_new_password_conf" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp" android:inputType="textPassword"
        android:layout_height="match_parent" android:hint="@string/dialog_new_password_conf" />

    <TextView android:id="@+id/dialog_photo" android:layout_width="match_parent"
        android:textSize="15sp" android:layout_marginTop="12sp" android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp" android:layout_height="match_parent"
        android:hint="@string/profile_photo" />

    <ImageView android:id="@+id/dialog_imageview_photo" android:layout_width="match_parent"
        android:layout_marginTop="2sp"
        android:layout_height="wrap_content" android:visibility="invisible"
        android:contentDescription="@string/register_content_description" />

    <Button android:id="@+id/dialog_add_photo" style="?android:textAppearanceSmall"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="2dp" android:text="@string/dialog_add_photo"
        android:textStyle="bold" />

    </LinearLayout>

</ScrollView>