<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.dan.ted.TED.mProfile">

    <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_marginTop="10dp" android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" android:layout_marginBottom="10dp">

        <TextView android:id="@+id/hello" android:layout_width="match_parent" android:textSize="25sp"
            android:layout_height="match_parent" android:text="@string/profile_hello" />

        <Space android:layout_width="1dp" android:layout_height="30dp"/>

        <TextView android:id="@+id/email" android:layout_width="match_parent"
            android:textSize="22sp" android:layout_marginTop="12sp"
            android:layout_height="match_parent" android:text="@string/profile_email" />

        <TextView android:id="@+id/phone" android:layout_width="match_parent"
            android:textSize="22sp" android:layout_marginTop="12sp"
            android:layout_height="match_parent" android:text="@string/profile_phone" />

        <TextView android:id="@+id/affiliation" android:layout_width="match_parent"
            android:textSize="22sp" android:layout_marginTop="12sp"
            android:layout_height="match_parent" android:text="@string/profile_affiliation" />

        <TextView android:id="@+id/photo" android:layout_width="wrap_content"
            android:textSize="22sp" android:layout_marginTop="12sp"
            android:layout_height="wrap_content" android:text="@string/profile_photo" />

        <ImageView android:id="@+id/profile_imageview_photo" android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" android:visibility="invisible"
            android:contentDescription="@string/register_content_description" />

        <Button android:id="@+id/edit_profile" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_edit"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
